--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
     <button class="paper">Paper</button>
     <button class="scissors">Scissors</button>
 
+    <div class="score">
+        <h1>Score: </h1>
+    </div>
+
     <script src="game.js"></script>
 </body>
 </html>
